test/typeerrors/ex8.golden
Building file ../test/typeerrors/ex8.act
  Compiling ex8.act for release

ERROR: Error when compiling ex8 module: Type error

Cannot satisfy the following simultaneous constraints for the unknown type t0:

  |
3 |    for x in n:
  |             ^
The type of n ( __builtin__.int) must be a subclass of t0

  |
3 |    for x in n:
  |             ^
The type of n (which we call t0) must implement __builtin__.Iterable[_]

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

